--- a/app/src/main/res/xml/glance_appwidget_provider.xml
+++ b/app/src/main/res/xml/glance_appwidget_provider.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<appwidget-provider
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:minWidth="240dp"
-    android:minHeight="140dp"
-    android:updatePeriodMillis="43200000"  <!-- 12 hours -->
+<appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
+    android:minWidth="200dp"
+    android:minHeight="110dp"
+    android:updatePeriodMillis="43200000"
     android:initialLayout="@layout/widget_salat"
     android:resizeMode="horizontal|vertical"
-    android:widgetCategory="home_screen"/>
+    android:widgetCategory="home_screen" />
